Chore: simplify stream API calls (#1004)